add img setting

--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
             <option value="ru">🇷🇺 RU</option>
             <option value="en">🇬🇧 ENG</option>
         </select>
-        <button id="mode-toggle"></button>
+        <button class="mode-toggle" id="mode-toggle"></button>
     </nav>
 
     <!-- 🖼 Hero -->
